--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./css/utilities.css" />
     <link rel="stylesheet" href="./css/queries.css" />
     <script defer src="./js/script.js"></script>
-    <title>Omnifood |</title>
+    <title>Omnifood</title>
   </head>
   <body>
     <section class="section-hero">
